--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "v8-to-istanbul",
   "version": "1.2.0",
   "description": "convert from v8 coverage format to istanbul's format",
-  "main": "index.js",
+  "main": "build/lib/index.js",
   "scripts": {
-    "snapshot": "TAP_SNAPSHOT=1 tap test/*.js",
-    "test": "tap test/*.js --cov",
+    "lint": "tslint --project src/lib/tsconfig.json",
     "posttest": "standard",
-    "release": "standard-version"
+    "prepare": "tsc --project src/lib/tsconfig.json",
+    "release": "standard-version",
+    "snapshot": "TAP_SNAPSHOT=1 tap src/test/*.ts",
+    "test": "tap src/test/*.ts --cov"
   },
   "repository": {
     "url": "git@github.com:bcoe/v8-to-istanbul.git"
   },
+  "files": [
+    "build/lib",
+    "CHANGELOG.md",
+    "LICENSE.txt",
+    "README.md"
+  ],
   "keywords": [
     "istanbul",
     "v8",
@@ -19,15 +27,26 @@
   ],
   "standard": {
     "ignore": [
+      "build",
       "**/test/fixtures"
     ]
   },
   "author": "Ben Coe <ben@npmjs.com>",
+  "contributors": [
+    "Charles Samborski <demurgos@demurgos.net>"
+  ],
   "license": "ISC",
+  "dependencies": {
+    "devtools-protocol": "0.0.579242"
+  },
   "devDependencies": {
+    "@types/node": "^10.5.6",
     "should": "^13.1.3",
     "standard": "^11.0.1",
     "standard-version": "^4.2.0",
-    "tap": "^12.0.1"
+    "tap": "^12.0.1",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1"
   }
 }
