refactor: define and use IstanbulBranch interface
This commit defines the `IstanbulBranch` interface. It is the result of the `.toIstanbul` method of `Covbranch`.

This commit also adds visibility modifiers and type information to `CovLine` and `CovBranch`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "newLine": "lf",
     "strict": true,
+    "strictNullChecks": true,
     "target": "es2017",
     "typeRoots": [
       "node_modules/@types",
