--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@babel/types": "^7.0.0-beta.56",
     "devtools-protocol": "0.0.579242"
   },
   "devDependencies": {
