fix: add `types` field to `package.json`
This commit fixes the resolution of type definitions for this package by adding a `types` field to `package.json`.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "convert from v8 coverage format to istanbul's format",
   "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
   "scripts": {
     "lint": "tslint --project src/lib/tsconfig.json",
     "posttest": "standard",
