--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "types": "build/lib/index.d.ts",
   "scripts": {
     "lint": "tslint --project src/lib/tsconfig.json",
+    "generate-fixtures": "ts-node tools/generate-fixtures.ts",
     "posttest": "standard",
     "prepare": "tsc --project src/lib/tsconfig.json",
     "release": "standard-version",
     "snapshot": "TAP_SNAPSHOT=1 tap src/test/*.ts",
-    "test": "tap src/test/*.ts --cov"
+    "test": "nyc mocha --require ts-node/register \"./src/test/**/*.spec.ts\"",
+    "test-tap": "tap src/test/*.ts --cov"
   },
   "repository": {
     "url": "git@github.com:bcoe/v8-to-istanbul.git"
@@ -42,7 +44,10 @@
     "devtools-protocol": "0.0.579242"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.6",
+    "chrome-remote-interface": "^0.26.1",
+    "mocha": "^5.2.0",
     "should": "^13.1.3",
     "standard": "^11.0.1",
     "standard-version": "^4.2.0",
@@ -50,5 +55,18 @@
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
+  },
+  "nyc": {
+    "include": [
+      "src/lib/**/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ],
+    "all": true
   }
 }
