--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "build/lib/index.js",
   "types": "build/lib/index.d.ts",
   "scripts": {
+    "generate:fixtures": "ts-node tools/generate-fixtures.ts",
+    "generate:snapshots": "cross-env SNAPSHOT=1 npm run test",
     "lint": "tslint --project src/lib/tsconfig.json",
-    "generate-fixtures": "ts-node tools/generate-fixtures.ts",
-    "posttest": "standard",
+    "posttest": "tslint --project src/lib/tsconfig.json",
     "prepare": "tsc --project src/lib/tsconfig.json",
     "release": "standard-version",
-    "snapshot": "TAP_SNAPSHOT=1 tap src/test/*.ts",
-    "test": "nyc mocha --require ts-node/register \"./src/test/**/*.spec.ts\"",
-    "test-tap": "tap src/test/*.ts --cov"
+    "test": "nyc mocha --require ts-node/register \"./src/test/**/*.spec.ts\""
   },
   "repository": {
     "url": "git@github.com:bcoe/v8-to-istanbul.git"
@@ -28,12 +27,6 @@
     "v8",
     "coverage"
   ],
-  "standard": {
-    "ignore": [
-      "build",
-      "**/test/fixtures"
-    ]
-  },
   "author": "Ben Coe <ben@npmjs.com>",
   "contributors": [
     "Charles Samborski <demurgos@demurgos.net>"
@@ -44,14 +37,14 @@
     "devtools-protocol": "0.0.579242"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.6",
+    "chai": "^4.1.2",
     "chrome-remote-interface": "^0.26.1",
+    "cross-env": "^5.2.0",
     "mocha": "^5.2.0",
-    "should": "^13.1.3",
-    "standard": "^11.0.1",
     "standard-version": "^4.2.0",
-    "tap": "^12.0.1",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
